--- a/MetanalysisNeonics/MetanalysisNeonics.tex
+++ b/MetanalysisNeonics/MetanalysisNeonics.tex
@@ -45,6 +45,17 @@
 \fi
 % use microtype if available
 \IfFileExists{microtype.sty}{\usepackage{microtype}}{}
+\usepackage{longtable}
+\usepackage{graphicx}
+% We will generate all images so they have a width \maxwidth. This means
+% that they will get their normal width if they fit onto the page, but
+% are scaled down if they would overflow the margins.
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth
+\else\Gin@nat@width\fi}
+\makeatother
+\let\Oldincludegraphics\includegraphics
+\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=\maxwidth]{#1}}
 \ifxetex
   \usepackage[setpagesize=false, % page size defined by xetex
               unicode=false, % unicode breaks when used with xetex
@@ -93,88 +104,340 @@
   
  \end{frontmatter}
 
-\emph{Text based on elsarticle sample manuscript, see
-\url{http://www.elsevier.com/author-schemas/latex-instructions\#elsarticle}}
+\section{Methods}\label{methods}
 
-\section{The Elsevier article class}\label{the-elsevier-article-class}
+All analysis were carried away with the R Statistical Software (R Core
+Team 2016), all meta-analyses were made on the metafor package
+(Viechtbauer 2010). Our estimations were based on the use of
+random/mixed-effects models form of meta-analyses, which provide an
+unconditional inference about a larger set of studies from which the k
+studies included in the meta-analysis are assumed to be a random sample
+(L. V. Hedges and Vevea 1998). This estimations do not assume that this
+larger set consists only of studies that have actually been conducted,
+but instead envision a hypothetical population of studies that comprises
+studies that have been conducted, that could have been conducted, or
+that may be conducted in the future (L. V. Hedges and Vevea 1998).
 
-\paragraph{Installation}\label{installation}
+We used the \emph{escalc} function of the metafor package to estimate
+the effect size estimates (Viechtbauer 2010), we used the
+\emph{standardized mean difference with heteroscedastic population
+variances in the two groups} (SDMH) as our estimator for effect size
+(Bonett 2009), the metafor package also corrects the slight positive
+bias of the estimation following (Wasserman, Hedges, and Olkin 1988). To
+be extra conservative we used the unbiased estimates of the sampling
+variances. In all cases the residual heterogeneity estimator was Hedges.
 
-If the document class \emph{elsarticle} is not available on your
-computer, you can download and install the system package
-\emph{texlive-publishers} (Linux) or install the LaTeX~package
-\emph{elsarticle} using the package manager of your TeX~installation,
-which is typically TeX~Live or MikTeX.
+Since we used mixed effect models we used the The Knapp and Hartung
+adjustment \textbf{(Knapp and Hartung, 2003)} to test the individual
+coefficients of the model.
 
-\paragraph{Usage}\label{usage}
+\subsection{Test for (Residual)
+Heterogeneity}\label{test-for-residual-heterogeneity}
 
-Once the package is properly installed, you can use the document class
-\emph{elsarticle} to create a manuscript. Please make sure that your
-manuscript follows the guidelines in the Guide for Authors of the
-relevant journal. It is not necessary to typeset your manuscript in
-exactly the same way as an article, unless you are submitting to a
-camera-ready copy (CRC) journal.
+For each model we tested for residual heterogeneity, if we used models
+without moderators, then the Cochran's Q-test (Cochran 1954) was used to
+test whether the variability in the observed effect sizes or outcomes is
+larger than would be expected based on sampling variability alone.
+\emph{A significant test suggests that the true effects or outcomes are
+heterogeneous}. When moderators were included in the models the
+Q\_E-test for residual heterogeneity was used, this tests whether the
+variability in the observed effect sizes or outcomes not accounted for
+by the moderators included in the model is larger than would be expected
+based on sampling variability alone. When using moderators to explain
+more variability a pseudo R squared was computed following (Raudenbush
+2009).
 
-\paragraph{Functionality}\label{functionality}
+\section{Results}\label{results}
 
-The Elsevier article class is based on the standard article class and
-supports almost all of the functionality of that class. In addition, it
-features commands and options to format the
+As we can see in figure 1, the most common type of performance measured
+in studies was abundance, with 101 estimations, followed by reproduction
+with 44 estimation, behavior with 23, and finally survival and condition
+with 16 each.
 
-\begin{itemize}
-\item
-  document style
-\item
-  baselineskip
-\item
-  front matter
-\item
-  keywords and MSC codes
-\item
-  theorems, definitions and proofs
-\item
-  lables of enumerations
-\item
-  citation style and labeling.
-\end{itemize}
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-2-1.pdf}
+\caption{Number of estimation of effect size within the meta-analyses}
+\end{figure}
 
-\section{Front matter}\label{front-matter}
+\begin{longtable}[c]{@{}rrrlrrrr@{}}
+\caption{effect size of the Standardized mean difference for each type
+of estimation of performance, it's standard error and
+p-value}\tabularnewline
+\toprule
+estimate & ci.ub & ci.lb & group & p & n & I2 & pvalCT\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+estimate & ci.ub & ci.lb & group & p & n & I2 & pvalCT\tabularnewline
+\midrule
+\endhead
+-0.917 & -0.423 & -1.410 & Abundance & 0.000 & 101 & 90.594 &
+0\tabularnewline
+-2.508 & 0.940 & -5.957 & Behavior & 0.154 & 23 & 99.742 &
+0\tabularnewline
+-5.319 & -1.556 & -9.083 & Survival & 0.006 & 16 & 98.756 &
+0\tabularnewline
+-3.366 & 13.710 & -20.441 & Reproduction & 0.699 & 44 & 99.995 &
+0\tabularnewline
+-1.078 & -0.128 & -2.027 & Condition & 0.026 & 16 & 98.597 &
+0\tabularnewline
+\bottomrule
+\end{longtable}
 
-The author names and affiliations could be formatted in two ways:
+\subsection{Overall effect size}\label{overall-effect-size}
 
-\begin{enumerate}
-\def\labelenumi{(\arabic{enumi})}
-\item
-  Group the authors per affiliation.
-\item
-  Use footnotes to indicate the affiliations.
-\end{enumerate}
+As we can see in table 1 and figure 2, all estimations of the effects
+are negative. However, only abundance, survival and condition have
+significative negative effects. Survival has the highest effect size,
+with a mean difference estimation of -5.32
 
-See the front matter of this document for examples. You are recommended
-to conform your choice to the journal you are submitting to.
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-4-1.pdf}
+\caption{effect size of the Standardized mean difference for each type
+of estimation of performance and it's standard error}
+\end{figure}
 
-\section{Bibliography styles}\label{bibliography-styles}
+\section{Estimations using
+moderators:}\label{estimations-using-moderators}
 
-There are various bibliography styles available. You can select the
-style of your choice in the preamble of this document. These styles are
-Elsevier styles based on standard styles like Harvard and Vancouver.
-Please use BibTeX~to generate your bibliography and include DOIs
-whenever available.
+\section{Abundance}\label{abundance}
 
-Here are two sample references: Feynman and {Vernon Jr.} (1963; Dirac
-1953).
+\subsubsection{Abundance and functional
+group}\label{abundance-and-functional-group}
+
+Using functional group as a moderator yields the following results
+
+\begin{longtable}[c]{@{}rrrlrr@{}}
+\caption{effect size of the Standardized mean difference of abundance
+for each functional group and it's standard error}\tabularnewline
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endhead
+-0.917 & -0.423 & -1.410 & Null & 0.000 & 101\tabularnewline
+-0.456 & 0.538 & -1.450 & detritivore & 0.368 & 24\tabularnewline
+-0.905 & -0.052 & -1.758 & mixed & 0.038 & 33\tabularnewline
+-4.069 & -1.608 & -6.531 & omnivore & 0.001 & 4\tabularnewline
+-1.654 & 0.626 & -3.934 & pollinator & 0.155 & 4\tabularnewline
+-0.787 & 0.011 & -1.585 & predator & 0.053 & 36\tabularnewline
+\bottomrule
+\end{longtable}
+
+the the psuedo R squared for this model was 0.06, that is despite the
+mixed and omnivore funtional groups being statistically significant,
+functional group on its own does not explain the variability of the
+results very well.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-6-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+for each functional group and it's standard error}
+\end{figure}
+
+\subsubsection{Abundance and nesting
+area}\label{abundance-and-nesting-area}
+
+\begin{longtable}[c]{@{}rrrlrr@{}}
+\caption{effect size of the Standardized mean difference of abundance
+controling for nesting area and it's standard error}\tabularnewline
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endhead
+-0.917 & -0.423 & -1.410 & Null & 0.000 & 101\tabularnewline
+-0.840 & -0.101 & -1.579 & aboveground & 0.026 & 0\tabularnewline
+-1.070 & -0.386 & -1.755 & both & 0.002 & 0\tabularnewline
+0.523 & 3.305 & -2.259 & ground & 0.713 & 0\tabularnewline
+\bottomrule
+\end{longtable}
+
+the the psuedo R squared for using nesting area as the only moderator
+was 0, this model does not explain much.
+
+\subsubsection{Abundance and concentration
+(ppb)}\label{abundance-and-concentration-ppb}
+
+When we use concentration as parts per billion, the number of effect
+sizes diminishes from 101 to only nine.
+
+Despite that, the r squared of this model is 0.45, that is over 40
+percent of cariability explained by this factor alone. The relationship
+between concentration and Abundance can be seen in figure 4.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-9-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+and concentration (ppb)}
+\end{figure}
+
+\subsubsection{Abundance concentration and functional
+group}\label{abundance-concentration-and-functional-group}
+
+Again, when we have concentration, the number of studies is reduced form
+101 to nine.
+
+Adding functional group to the model increases R squared to 0.85
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-11-1.pdf}
+\caption{effect size of the concentration and functional group on the
+Standardized mean difference of abundance}
+\end{figure}
+
+\subsubsection{Abundance concentration and nesting
+area}\label{abundance-concentration-and-nesting-area}
+
+\subsubsection{Full model}\label{full-model}
+
+\subsubsection{Comparison of models}\label{comparison-of-models}
+
+\begin{longtable}[c]{@{}lrrrr@{}}
+\caption{Comparison of models taking into account p value, Pseudo R
+squared and AICc}\tabularnewline
+\toprule
+model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+\midrule
+\endhead
+y \textasciitilde{} Concentration & 0.008 & 0.45 & 60.476 &
+0.000\tabularnewline
+y \textasciitilde{} Concentration + Functional group & 0.000 & 0.85 &
+66.225 & 5.749\tabularnewline
+y \textasciitilde{} Concentration + Nesting area + Functional group &
+0.000 & 0.85 & 66.225 & 5.749\tabularnewline
+y \textasciitilde{} Concentration + Nesting area & 0.032 & 0.40 & 67.454
+& 6.978\tabularnewline
+y \textasciitilde{} Functional group & 0.106 & 0.06 & 464.017 &
+403.541\tabularnewline
+y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 &
+406.173\tabularnewline
+\bottomrule
+\end{longtable}
+
+\section{Behaviour}\label{behaviour}
+
+\section{Abundance}\label{abundance-1}
+
+\subsubsection{Abundance and functional
+group}\label{abundance-and-functional-group-1}
+
+Using functional group as a moderator yields the following results
+
+\begin{longtable}[c]{@{}rrrlrr@{}}
+\caption{effect size of the Standardized mean difference of abundance
+for each functional group and it's standard error}\tabularnewline
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endhead
+-2.508 & 0.940 & -5.957 & Null & 0.154 & 23\tabularnewline
+-5.932 & 4.630 & -16.494 & commercial & 0.271 & 3\tabularnewline
+-3.763 & 9.232 & -16.759 & granular & 0.570 & 2\tabularnewline
+-0.501 & 12.395 & -13.396 & not specified & 0.939 & 2\tabularnewline
+-2.767 & 10.141 & -15.675 & seed treatment & 0.674 & 2\tabularnewline
+-2.291 & 3.053 & -7.634 & solution & 0.401 & 12\tabularnewline
+0.456 & 13.386 & -12.474 & technical grade & 0.945 & 2\tabularnewline
+\bottomrule
+\end{longtable}
+
+the the psuedo R squared for this model was 0, that is despite the mixed
+and omnivore funtional groups being statistically significant,
+functional group on its own does not explain the variability of the
+results very well.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-16-1.pdf}
+\caption{effect size of the Standardized mean difference of behavior for
+each AI type and it's standard error}
+\end{figure}
+
+Behavior/Reproduction and neonic AI (e.g., IMI, CLO) and ppb
+
+Abundance
+
+Seed treatment only and functional group and nesting area
+
+AI type and functional group
+
+Effects on:
+
+Performance measures
+
+Performance measures and functional group
+
+Functional group
+
+Performance measures and nesting area
+
+Behavior
+
+AI type and functional group
+
+Reproduction and order and functional group
+
+Abundance and order and functional group
+
+Behavior and study type
+
+Reproduction and nesting area
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-17-1.pdf}
+\caption{test}
+\end{figure}
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
-Dirac, P.A.M. 1953. ``The Lorentz Transformation and Absolute Time.''
-\emph{Physica} 19 (1---12): 888--96.
-doi:\href{http://dx.doi.org/10.1016/S0031-8914(53)80099-6}{10.1016/S0031-8914(53)80099-6}.
+Bonett, Douglas G. 2009. ``Meta-Analytic Interval Estimation for
+Standardized and Unstandardized Mean Differences.'' \emph{Psychological
+Methods} 14 (3). American Psychological Association: 225.
 
-Feynman, R.P, and F.L {Vernon Jr.} 1963. ``The Theory of a General
-Quantum System Interacting with a Linear Dissipative System.''
-\emph{Annals of Physics} 24: 118--73.
-doi:\href{http://dx.doi.org/10.1016/0003-4916(63)90068-X}{10.1016/0003-4916(63)90068-X}.
+Cochran, William G. 1954. ``The Combination of Estimates from Different
+Experiments.'' \emph{Biometrics} 10 (1). JSTOR: 101--29.
+
+Hedges, Larry V, and Jack L Vevea. 1998. ``Fixed-and Random-Effects
+Models in Meta-Analysis.'' \emph{Psychological Methods} 3 (4). American
+Psychological Association: 486.
+
+R Core Team. 2016. \emph{R: A Language and Environment for Statistical
+Computing}. Vienna, Austria: R Foundation for Statistical Computing.
+\url{https://www.R-project.org/}.
+
+Raudenbush, Stephen W. 2009. ``Analyzing Effect Sizes: Random-Effects
+Models.'' \emph{The Handbook of Research Synthesis and Meta-Analysis} 2:
+295--316.
+
+Viechtbauer, Wolfgang. 2010. ``Conducting Meta-Analyses in R with the
+metafor Package.'' \emph{Journal of Statistical Software} 36 (3): 1--48.
+\url{http://www.jstatsoft.org/v36/i03/}.
+
+Wasserman, Stanley, Larry V. Hedges, and Ingram Olkin. 1988.
+``Statistical Methods for Meta-Analysis.'' \emph{Journal of Educational
+Statistics} 13 (1). JSTOR: 75.
+doi:\href{http://dx.doi.org/10.2307/1164953}{10.2307/1164953}.
 
 \end{document}
 
