--- a/MetanalysisNeonics/mybibfile.bib
+++ b/MetanalysisNeonics/mybibfile.bib
@@ -9,26 +9,48 @@
   publisher={American Psychological Association}
 }
 
-@article{Dirac1953888,
-  title   = "The lorentz transformation and absolute time",
-  journal = "Physica ",
-  volume  = "19",
-  number  = "1-–12",
-  pages   = "888--896",
-  year    = "1953",
-  doi     = "10.1016/S0031-8914(53)80099-6",
-  author  = "P.A.M. Dirac"
+@article{cochran1954combination,
+  title={The combination of estimates from different experiments},
+  author={Cochran, William G},
+  journal={Biometrics},
+  volume={10},
+  number={1},
+  pages={101--129},
+  year={1954},
+  publisher={JSTOR}
 }
 
-@article{Feynman1963118,
-  title   = "The theory of a general quantum system interacting with a linear dissipative system",
-  journal = "Annals of Physics ",
-  volume  = "24",
-  pages   = "118--173",
-  year    = "1963",
-  doi     = "10.1016/0003-4916(63)90068-X",
-  author  = "R.P Feynman and F.L {Vernon Jr.}"
+
+@article{hedges1998fixed,
+  title={Fixed-and random-effects models in meta-analysis.},
+  author={Hedges, Larry V and Vevea, Jack L},
+  journal={Psychological methods},
+  volume={3},
+  number={4},
+  pages={486},
+  year={1998},
+  publisher={American Psychological Association}
 }
+
+
+@article{raudenbush2009analyzing,
+  title={Analyzing effect sizes: Random-effects models},
+  author={Raudenbush, Stephen W},
+  journal={The handbook of research synthesis and meta-analysis},
+  volume={2},
+  pages={295--316},
+  year={2009}
+}
+
+
+@Manual{Rcore,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2016},
+    url = {https://www.R-project.org/},
+  }
 
 @article{viechtbauer2010conducting,
   title = {Conducting meta-analyses in {R} with the {metafor} package},
@@ -39,4 +61,17 @@
   number = {3},
   pages = {1--48},
   url = {http://www.jstatsoft.org/v36/i03/},
+}
+
+@article{Wasserman1988,
+  doi = {10.2307/1164953},
+  url = {https://doi.org/10.2307%2F1164953},
+  year  = {1988},
+  publisher = {{JSTOR}},
+  volume = {13},
+  number = {1},
+  pages = {75},
+  author = {Stanley Wasserman and Larry V. Hedges and Ingram Olkin},
+  title = {Statistical Methods for Meta-Analysis},
+  journal = {Journal of Educational Statistics}
 }
