--- a/MetanalysisNeonics/MetanalysisNeonics.Rmd
+++ b/MetanalysisNeonics/MetanalysisNeonics.Rmd
@@ -58,6 +58,7 @@ library(metafor)
 #Abundance
 Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
 
+
 dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance, vtype = "UB")
 
 res <- rma(yi, vi, data=dat1, refline = 0, method = "HE", slab = paste(dat1$Authors, dat1$Year))
@@ -132,6 +133,8 @@ Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
 dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance, vtype = "UB")
 
 res <- rma(yi, vi, data=dat1, refline = 0, method = "HE", slab = paste(dat1$Authors, dat1$Year))
+
+model0 <- data.frame(model = "y ~ 1", p_value = res$QMp, R_squared = 0, AICc = res$fit.stats$ML[5])
 
 nullmod <- data.frame(estimate = res$b, ci.ub = res$ci.ub, ci.lb = res$ci.lb, group = c("Null"), p = res$pval, n =nrow(Abundance))
 
@@ -218,6 +221,72 @@ ggplot(dat1, aes(x = T1_ppb, y = yi))  + geom_ribbon(data = preds, aes(x = X.T1_
 
 ```
 
+### Abundance and concentration (Kg/Ha) for Powder/granular treatment
+
+When we use concentration as parts per billion, the number of effect sizes diminishes from 101 to only nine.
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
+
+Abundance_kg_ha <- dplyr::filter(Abundance, Application.Units == "kg/ha")
+Abundance_kg_ha <- dplyr::filter(Abundance_kg_ha, TreatmentType == "powder/granular")
+Abundance_kg_ha_t2 <- dplyr::filter(Abundance_kg_ha, !is.na(AI.Rate_T2))
+Abundance_kg_ha_t2$AI.Rate_T1 <- Abundance_kg_ha_t2$AI.Rate_T2
+Abundance_kg_ha_t2$T1_Mean <- Abundance_kg_ha_t2$T2_Mean
+Abundance_kg_ha_t2$T1_SE <- Abundance_kg_ha_t2$T2_SE
+Abundance_kg_ha_t2$Study.T1..n. <- Abundance_kg_ha_t2$Study.T2..n.
+
+Abundance_kg_ha <- rbind(Abundance_kg_ha, Abundance_kg_ha_t2)
+
+dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_kg_ha, vtype = "UB")
+
+res7 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1, slab = paste(dat1$Authors, dat1$Year))
+
+#res2 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb +  factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
+preds <- predict(res7, newmods = cbind(seq(from = min(dat1$AI.Rate_T1), to = max(dat1$AI.Rate_T1), length.out =  20)), addx = TRUE)
+preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.AI.Rate_T1 = preds$X[,2])
+
+model7 <- data.frame(model = "y ~ Concentration[Kg/Ha]", p_value = res7$QMp, R_squared = round(res7$R2/100,2), AICc = res7$fit.stats$ML[5])
+```
+
+Despite that, the r squared of this model is `r round(res7$R2/100,2)`, that is over 40 percent of cariability explained by this factor alone. The relationship between concentration and Abundance can be seen in figure 4.
+
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the Standardized mean difference of abundance and concentration (ppb)"}
+
+ggplot(dat1, aes(x = AI.Rate_T1, y = yi))  + geom_ribbon(data = preds, aes(x = X.AI.Rate_T1, y = pred, ymin = ci.lb, ymax = ci.ub), fill = "grey", alpha = 0.5) + theme_classic() + geom_line(data = preds, aes(x = X.AI.Rate_T1, y = pred)) + geom_point() + xlab("Concentration (kg/ha)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2)
+
+```
+
+### Abundance and concentration (g/Kg) for seed treatment
+
+When we use concentration as parts per billion, the number of effect sizes diminishes from 101 to only nine.
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
+
+Abundance_g_kg <- dplyr::filter(Abundance, Application.Units == "g/kg")
+
+
+dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_g_kg, vtype = "UB")
+
+res8 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1, slab = paste(dat1$Authors, dat1$Year))
+
+preds <- predict(res8, newmods = cbind(seq(from = min(dat1$AI.Rate_T1), to = max(dat1$AI.Rate_T1), length.out =  20)), addx = TRUE)
+preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.AI.Rate_T1 = preds$X[,2])
+
+model8 <- data.frame(model = "y ~ Concentration[g/kg]", p_value = res8$QMp, R_squared = round(res8$R2/100,2), AICc = res8$fit.stats$ML[5])
+```
+
+Despite that, the r squared of this model is `r round(res8$R2/100,2)`, that is over 40 percent of cariability explained by this factor alone. The relationship between concentration and Abundance can be seen in figure 4.
+
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the Standardized mean difference of abundance and concentration (ppb)"}
+
+ggplot(dat1, aes(x = AI.Rate_T1, y = yi))  + geom_ribbon(data = preds, aes(x = X.AI.Rate_T1, y = pred, ymin = ci.lb, ymax = ci.ub), fill = "grey", alpha = 0.5) + theme_classic() + geom_line(data = preds, aes(x = X.AI.Rate_T1, y = pred)) + geom_point() + xlab("Concentration (g/kg)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2)
+
+```
+
 ### Abundance concentration and functional group
 
 Again, when we have concentration, the number of studies is reduced form 101 to nine.
@@ -286,7 +355,7 @@ model6 <- data.frame(model = "y ~ Concentration + Nesting area + Functional grou
 ### Comparison of models
 
 ```{r, echo= FALSE}
-All <- rbind(model1, model2, model3, model4, model5, model6)
+All <- rbind(model0, model1, model2, model3, model4, model5, model6, model7, model8)
 
 All <- dplyr::arrange(All, AICc)
 
@@ -297,9 +366,7 @@ knitr::kable(All, digits = 3, row.names = FALSE, caption = "Comparison of models
 
 # Behaviour
 
-# Abundance
-
-### Abundance and functional group
+### Behaviour and functional group
 
 Using functional group as a moderator yields the following results
 
@@ -337,7 +404,98 @@ ggplot(All, aes(x = group, y = estimate)) + geom_point(aes(size = n)) + coord_fl
 
 ```
 
+# Behavior and concentration (PPB)
 
+When we use concentration as parts per billion, the number of effect sizes diminishes from 101 to only nine.
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
+Behavior_ppb <- Behavior[!is.na(Behavior$T1_ppb),]
+
+Behavior_ppb_t2 <- dplyr::filter(Behavior_ppb, !is.na(T2_ppb))
+Behavior_ppb_t2$T1_ppb <- Behavior_ppb_t2$T2_ppb
+Behavior_ppb_t2$T1_Mean <- Behavior_ppb_t2$T2_Mean
+Behavior_ppb_t2$T1_SE <- Behavior_ppb_t2$T2_SE
+Behavior_ppb_t2$Study.T1..n. <- Behavior_ppb_t2$Study.T2..n.
+
+Behavior_ppb <- rbind(Behavior_ppb, Behavior_ppb_t2)
+
+dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior_ppb, vtype = "UB")
+
+res2 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb, slab = paste(dat1$Authors, dat1$Year))
+
+#res2 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb +  factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
+preds <- predict(res2, newmods = cbind(seq(from = min(dat1$T1_ppb), to = max(dat1$T1_ppb), length.out =  20)), addx = TRUE)
+preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.T1_ppb = preds$X[,2])
+
+model2 <- data.frame(model = "y ~ Concentration", p_value = res2$QMp, R_squared = round(res2$R2/100,2), AICc = res2$fit.stats$ML[5])
+```
+
+Despite that, the r squared of this model is `r round(res2$R2/100,2)`, that is over 40 percent of cariability explained by this factor alone. The relationship between concentration and Abundance can be seen in figure 4.
+
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the Standardized mean difference of behavior and concentration (ppb)"}
+
+ggplot(dat1, aes(x = T1_ppb, y = yi))  + geom_ribbon(data = preds, aes(x = X.T1_ppb, y = pred, ymin = ci.lb, ymax = ci.ub), fill = "grey", alpha = 0.5) + theme_classic() + geom_line(data = preds, aes(x = X.T1_ppb, y = pred)) + geom_point(aes(size = Study.T1..n.)) + xlab("Concentration (ppb)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2)
+
+```
+
+### Abundance concentration and functional group
+
+Again, when we have concentration, the number of studies is reduced form 101 to nine.
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+
+
+Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
+Behavior_ppb <- Behavior[!is.na(Behavior$T1_ppb),]
+
+Behavior_ppb_t2 <- dplyr::filter(Behavior_ppb, !is.na(T2_ppb))
+Behavior_ppb_t2$T1_ppb <- Behavior_ppb_t2$T2_ppb
+Behavior_ppb_t2$T1_Mean <- Behavior_ppb_t2$T2_Mean
+Behavior_ppb_t2$T1_SE <- Behavior_ppb_t2$T2_SE
+Behavior_ppb_t2$Study.T1..n. <- Behavior_ppb_t2$Study.T2..n.
+
+Behavior_ppb <- rbind(Behavior_ppb, Behavior_ppb_t2)
+
+dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior_ppb, vtype = "UB")
+
+
+res3 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb + factor(Treatment.2), slab = paste(dat1$Authors, dat1$Year))
+
+library(caret)
+
+newmods = expand.grid(T1_ppb = seq(from = min(dat1$T1_ppb), to = max(dat1$T1_ppb), length.out =  20), Treatment.2 = c("CLO", "IMI"))
+
+dum <- dummyVars(~ Treatment.2, data = newmods)
+
+NM <- cbind(newmods[,1],predict(dum, newmods))
+
+preds <- predict(res3, newmods = NM[,1:2])
+
+preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, T1_ppb = newmods$T1_ppb, Treatment.2 = newmods$Treatment.2)
+
+model3 <- data.frame(model = "y ~ Concentration + neonic type", p_value = res3$QMp, R_squared = round(res3$R2/100,2), AICc = res3$fit.stats$ML[5])
+```
+
+Adding functional group to the model increases R squared to `r round(res3$R2/100,2)`
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the concentration and neonic type on the behavior Standardized mean difference of abundance"}
+
+ggplot(preds, aes(x = T1_ppb, y = pred))  + geom_ribbon(alpha = 0.5,aes(ymin = ci.lb, ymax = ci.ub, fill = Treatment.2)) + theme_classic() + geom_line(aes(lty = Treatment.2))+ xlab("Concentration (ppb)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2) + scale_fill_grey() + geom_point(alpha = 0.8, data= dat1, aes(x = T1_ppb, y = yi, size = Study.T1..n., color = Treatment.2)) + scale_color_grey() + scale_x_log10()
+```
+
+### Comparison of models
+
+```{r, echo= FALSE}
+All <- rbind(model1, model2, model3)
+
+All <- dplyr::arrange(All, AICc)
+
+All$deltaAICc <- (All$AICc - min(All$AICc))
+
+knitr::kable(All, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+```
 
 
 Behavior/Reproduction and neonic AI (e.g., IMI, CLO) and ppb
@@ -345,7 +503,7 @@ Behavior/Reproduction and neonic AI (e.g., IMI, CLO) and ppb
 
 Abundance
 
-Seed treatment only and functional group and nesting area
+Seed treatment only 
 
 AI type and functional group
 
