--- a/MetanalysisNeonics/MetanalysisNeonics.tex
+++ b/MetanalysisNeonics/MetanalysisNeonics.tex
@@ -282,6 +282,40 @@ between concentration and Abundance can be seen in figure 4.
 and concentration (ppb)}
 \end{figure}
 
+\subsubsection{Abundance and concentration (Kg/Ha) for Powder/granular
+treatment}\label{abundance-and-concentration-kgha-for-powdergranular-treatment}
+
+When we use concentration as parts per billion, the number of effect
+sizes diminishes from 101 to only nine.
+
+Despite that, the r squared of this model is 0.04, that is over 40
+percent of cariability explained by this factor alone. The relationship
+between concentration and Abundance can be seen in figure 4.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-11-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+and concentration (ppb)}
+\end{figure}
+
+\subsubsection{Abundance and concentration (g/Kg) for seed
+treatment}\label{abundance-and-concentration-gkg-for-seed-treatment}
+
+When we use concentration as parts per billion, the number of effect
+sizes diminishes from 101 to only nine.
+
+Despite that, the r squared of this model is 0.27, that is over 40
+percent of cariability explained by this factor alone. The relationship
+between concentration and Abundance can be seen in figure 4.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-13-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+and concentration (ppb)}
+\end{figure}
+
 \subsubsection{Abundance concentration and functional
 group}\label{abundance-concentration-and-functional-group}
 
@@ -292,7 +326,7 @@ Adding functional group to the model increases R squared to 0.85
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-11-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-15-1.pdf}
 \caption{effect size of the concentration and functional group on the
 Standardized mean difference of abundance}
 \end{figure}
@@ -323,6 +357,11 @@ y \textasciitilde{} Concentration + Nesting area + Functional group &
 0.000 & 0.85 & 66.225 & 5.749\tabularnewline
 y \textasciitilde{} Concentration + Nesting area & 0.100 & 0.40 & 67.454
 & 6.978\tabularnewline
+y \textasciitilde{} Concentration{[}g/kg{]} & 0.019 & 0.27 & 132.915 &
+72.440\tabularnewline
+y \textasciitilde{} Concentration{[}Kg/Ha{]} & 0.165 & 0.04 & 164.902 &
+104.427\tabularnewline
+y \textasciitilde{} 1 & 0.000 & 0.00 & 463.583 & 403.108\tabularnewline
 y \textasciitilde{} Functional group & 0.106 & 0.06 & 464.017 &
 403.541\tabularnewline
 y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 &
@@ -332,10 +371,8 @@ y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 &
 
 \section{Behaviour}\label{behaviour}
 
-\section{Abundance}\label{abundance-1}
-
-\subsubsection{Abundance and functional
-group}\label{abundance-and-functional-group-1}
+\subsubsection{Behaviour and functional
+group}\label{behaviour-and-functional-group}
 
 Using functional group as a moderator yields the following results
 
@@ -367,16 +404,70 @@ results very well.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-16-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-20-1.pdf}
 \caption{effect size of the Standardized mean difference of behavior for
 each AI type and it's standard error}
 \end{figure}
+
+\section{Behavior and concentration
+(PPB)}\label{behavior-and-concentration-ppb}
+
+When we use concentration as parts per billion, the number of effect
+sizes diminishes from 101 to only nine.
+
+Despite that, the r squared of this model is 0.04, that is over 40
+percent of cariability explained by this factor alone. The relationship
+between concentration and Abundance can be seen in figure 4.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-22-1.pdf}
+\caption{effect size of the Standardized mean difference of behavior and
+concentration (ppb)}
+\end{figure}
+
+\subsubsection{Abundance concentration and functional
+group}\label{abundance-concentration-and-functional-group-1}
+
+Again, when we have concentration, the number of studies is reduced form
+101 to nine.
+
+Adding functional group to the model increases R squared to 0.14
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-24-1.pdf}
+\caption{effect size of the concentration and neonic type on the
+behavior Standardized mean difference of abundance}
+\end{figure}
+
+\subsubsection{Comparison of models}\label{comparison-of-models-1}
+
+\begin{longtable}[c]{@{}lrrrr@{}}
+\caption{Comparison of models taking into account p value, Pseudo R
+squared and AICc}\tabularnewline
+\toprule
+model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+\midrule
+\endhead
+y \textasciitilde{} Concentration & 0.136 & 0.04 & 143.381 &
+0.000\tabularnewline
+y \textasciitilde{} Concentration + neonic type & 0.099 & 0.14 & 143.454
+& 0.073\tabularnewline
+y \textasciitilde{} AI type & 0.981 & 0.00 & 183.581 &
+40.200\tabularnewline
+\bottomrule
+\end{longtable}
 
 Behavior/Reproduction and neonic AI (e.g., IMI, CLO) and ppb
 
 Abundance
 
-Seed treatment only and functional group and nesting area
+Seed treatment only
 
 AI type and functional group
 
@@ -404,7 +495,7 @@ Reproduction and nesting area
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-17-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-26-1.pdf}
 \caption{test}
 \end{figure}
 
